[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Rain.gd" type="Script" id=1]

[node name="Rain" type="Node2D"]
z_index = 5
script = ExtResource( 1 )

[node name="RainFx" type="CPUParticles2D" parent="."]
position = Vector2( 5542, -34 )
emitting = false
amount = 10000
lifetime = 4.0
speed_scale = 1.5
randomness = 1.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 6000, 1 )
angular_velocity = 60.0
linear_accel = 90.0
scale_amount = 3.0
color = Color( 0, 0.901961, 1, 0.960784 )

[node name="RainTime" type="Timer" parent="."]
one_shot = true

[node name="TimerToRain" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="timeout" from="RainTime" to="." method="_on_RainTime_timeout"]
[connection signal="timeout" from="TimerToRain" to="." method="_on_TimerToRain_timeout"]
